Refactored package for agent